--- a/APVQuiz/firstwindow.ui
+++ b/APVQuiz/firstwindow.ui
@@ -57,7 +57,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="passwordLineEdit"/>
+        <widget class="QLineEdit" name="passwordLineEdit">
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
