--- a/APVQuiz/signupdialog.ui
+++ b/APVQuiz/signupdialog.ui
@@ -54,13 +54,21 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="passwordLineEdit"/>
+     <widget class="QLineEdit" name="passwordLineEdit">
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
+     </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="usernameLineEdit"/>
     </item>
     <item row="3" column="1">
-     <widget class="QLineEdit" name="confirPasswordLineEdit"/>
+     <widget class="QLineEdit" name="confirPasswordLineEdit">
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
+     </widget>
     </item>
     <item row="4" column="0" colspan="2">
      <widget class="QPushButton" name="pushButton">
