--- a/APVQuiz/resource.qrc
+++ b/APVQuiz/resource.qrc
@@ -1,6 +1,3 @@
 <RCC>
-    <qresource prefix="/images">
-        <file>images/Harry-Potter-Hat.ico</file>
-        <file>images/gk.png</file>
-    </qresource>
+    <qresource prefix="/images"/>
 </RCC>
