--- a/APVQuiz/contribute.ui
+++ b/APVQuiz/contribute.ui
@@ -96,7 +96,7 @@ p, li { white-space: pre-wrap; }
     <string>Submit</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -118,7 +118,7 @@ p, li { white-space: pre-wrap; }
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -141,6 +141,17 @@ p, li { white-space: pre-wrap; }
    </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>questionTextEdit</tabstop>
+  <tabstop>option1LineEdit</tabstop>
+  <tabstop>option2LineEdit</tabstop>
+  <tabstop>option3LineEdit</tabstop>
+  <tabstop>option4LineEdit</tabstop>
+  <tabstop>choiceComboBox</tabstop>
+  <tabstop>subjectComboBox</tabstop>
+  <tabstop>pushButton</tabstop>
+  <tabstop>utiiltiyTextEdit</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
