--- a/APVQuiz/firstwindow.ui
+++ b/APVQuiz/firstwindow.ui
@@ -84,12 +84,24 @@
        <property name="text">
         <string>Login</string>
        </property>
+       <property name="autoDefault">
+        <bool>true</bool>
+       </property>
+       <property name="default">
+        <bool>false</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="signUpPushButton">
        <property name="text">
         <string>Sign Up</string>
+       </property>
+       <property name="autoDefault">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
