--- a/APVQuiz/firstwindow.ui
+++ b/APVQuiz/firstwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>FirstWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(222, 225, 229);</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
@@ -31,6 +34,9 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="usernameLabel">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(64, 69, 79);</string>
+         </property>
          <property name="text">
           <string>Username</string>
          </property>
@@ -40,7 +46,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="usernameLineEdit"/>
+        <widget class="QLineEdit" name="usernameLineEdit">
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
@@ -48,6 +58,9 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="passwordLabel">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(64, 69, 79);</string>
+         </property>
          <property name="text">
           <string>Password</string>
          </property>
@@ -69,6 +82,9 @@
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="ipLabel">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(64, 69, 79);</string>
+         </property>
          <property name="text">
           <string>       Ip        </string>
          </property>
@@ -81,6 +97,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="loginPushButton">
+       <property name="styleSheet">
+        <string notr="true">color: rgb(64, 69, 79);</string>
+       </property>
        <property name="text">
         <string>Login</string>
        </property>
@@ -97,6 +116,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="signUpPushButton">
+       <property name="styleSheet">
+        <string notr="true">color: rgb(64, 69, 79);</string>
+       </property>
        <property name="text">
         <string>Sign Up</string>
        </property>
@@ -108,6 +130,59 @@
     </layout>
     <zorder>signUpPushButton</zorder>
     <zorder>loginPushButton</zorder>
+   </widget>
+   <widget class="QLabel" name="nameLabel">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>60</y>
+      <width>291</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 50pt &quot;Ubuntu&quot;;
+background-color: rgb(81, 88, 99);
+color: rgb(255,255,255);
+text-align: right;
+qProperty-alignment: 'AlignVCenter | AlignLeft';
+qProperty-Wordwrap: true;</string>
+    </property>
+    <property name="text">
+     <string>APV Quiz</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>-40</x>
+      <y>60</y>
+      <width>371</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(81, 88, 99);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>60</y>
+      <width>411</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(81, 88, 99);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
