--- a/APVQuiz/gamewindow.ui
+++ b/APVQuiz/gamewindow.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 15pt &quot;Ubuntu&quot;;</string>
+    <string notr="true">font: 14pt &quot;Ubuntu&quot;;</string>
    </property>
    <property name="text">
     <string/>
@@ -47,6 +47,9 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string>Opponents</string>
       </property>
@@ -59,6 +62,9 @@
         <width>50</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string>Score</string>
@@ -73,6 +79,9 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -85,6 +94,9 @@
         <width>50</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -99,6 +111,9 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -111,6 +126,9 @@
         <width>50</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -140,6 +158,9 @@
         <height>50</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -152,6 +173,9 @@
         <width>0</width>
         <height>50</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -168,8 +192,15 @@
       </property>
       <property name="font">
        <font>
-        <kerning>true</kerning>
+        <family>Ubuntu</family>
+        <pointsize>13</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
        </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -183,6 +214,9 @@
         <width>0</width>
         <height>50</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -227,6 +261,9 @@ color: rgb(239, 41, 41);</string>
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string>Score </string>
       </property>
@@ -239,6 +276,9 @@ color: rgb(239, 41, 41);</string>
         <width>0</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
