--- a/APVQuiz/mainwindow.ui
+++ b/APVQuiz/mainwindow.ui
@@ -26,7 +26,7 @@
     <item>
      <widget class="QLabel" name="welocomeLabel">
       <property name="text">
-       <string>Hi !! </string>
+       <string>Hi </string>
       </property>
      </widget>
     </item>
