--- a/APVQuiz/gamewindow.ui
+++ b/APVQuiz/gamewindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(222, 225, 229);</string>
+  </property>
   <widget class="QLabel" name="utilityLabel">
    <property name="geometry">
     <rect>
@@ -159,7 +162,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+       <string notr="true">font: 11pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -175,7 +178,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+       <string notr="true">font: 11pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -192,15 +195,11 @@
       </property>
       <property name="font">
        <font>
-        <family>Ubuntu</family>
-        <pointsize>13</pointsize>
-        <weight>50</weight>
-        <italic>false</italic>
-        <bold>false</bold>
+        <kerning>true</kerning>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+       <string notr="true">font: 11pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
@@ -216,7 +215,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 13pt &quot;Ubuntu&quot;;</string>
+       <string notr="true">font: 11pt &quot;Ubuntu&quot;;</string>
       </property>
       <property name="text">
        <string/>
